# final-project-project5-team2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: continuous-deployment.yml  web-app.yml
web-app/: Dockerfile  app.py  mongodb.py  requirements.txt
web-app/static/: app.js
web-app/static/css/: style.css
web-app/templates/: base.html  error.html  feed.html  login.html  newPost.html  post.html  signup.html  styles.css  welcome.html
web-app/tests/: test_web_app.py
